--- a/src/components/SideMenu/ClickableIcon.css
+++ b/src/components/SideMenu/ClickableIcon.css
@@ -1,6 +1,6 @@
 .clickable-icon-container {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center; 
 }
 
