--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
-html, body { 
-	margin:0;
-	height:100%;
+html,
+body {
+	margin: 0;
+	height: 100%
 }
+
 body {
 	font-size: larger;
 	overflow-y: hidden;
